# foci_ros2_ws

src/demo_collection/: CMakeLists.txt  package.xml
src/demo_collection/config/: fr3_rviz_config.rviz
src/demo_collection/launch/: demo_recorder.launch.py
src/demo_collection/scripts/: demo_recorder.py  joystick_publisher.py  keyboard_publisher.py
src/foci_policy/: CMakeLists.txt  package.xml
src/foci_policy/launch/: foci.launch.py
src/foci_policy/scripts/: foci_node.py  foci_policy_realworld.py  foci_policy_test.py
src/franka_fr3_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml
